[gd_scene load_steps=3 format=3 uid="uid://boftf82yrcr1u"]

[ext_resource type="Script" path="res://Scenes and scripts/global/global scripts/scene_transfer.gd" id="1_g55w0"]
[ext_resource type="PackedScene" uid="uid://cgqljpk3ucb7f" path="res://Scenes and scripts/global/globalScenes/transition_mask.tscn" id="2_attje"]

[node name="SceneTransfer" type="Area2D"]
process_mode = 3
collision_layer = 4
collision_mask = 16
script = ExtResource("1_g55w0")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="Timer2" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="TransitionMask" parent="." instance=ExtResource("2_attje")]
visible = false

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="Timer2" to="." method="_on_timer_2_timeout"]
